// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated style shape snapshots > osm colorful (dark) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful (light) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful with terrain + hillshade + extruded buildings 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": true,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "hillshade:hillshade",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-way-footway:outline",
    "line:tunnel-way-steps:outline",
    "line:tunnel-way-path:outline",
    "line:tunnel-way-cycleway:outline",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:way-footway:outline",
    "line:way-steps:outline",
    "line:way-path:outline",
    "line:way-cycleway:outline",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-way-footway:outline",
    "line:bridge-way-steps:outline",
    "line:bridge-way-path:outline",
    "line:bridge-way-cycleway:outline",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
    "fill-extrusion:building-3d",
  ],
  "sources": [
    "elevation",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite raster-only (no overlay) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-symbols",
    "background:slot-below-labels",
  ],
  "sources": [
    "satellite",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite with toner overlay 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-streets",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:aerialway:outline",
    "line:transport-minorrail",
    "line:transport-ferry",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "satellite",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > variant layer counts 1`] = `
{
  "classic-terrain/de": 269,
  "classic-terrain/en": 269,
  "classic-terrain/style": 269,
  "classic/de": 268,
  "classic/en": 268,
  "classic/nolabel": 236,
  "classic/style": 268,
  "colorful-dark-terrain/de": 269,
  "colorful-dark-terrain/en": 269,
  "colorful-dark-terrain/style": 269,
  "colorful-dark/de": 268,
  "colorful-dark/en": 268,
  "colorful-dark/nolabel": 236,
  "colorful-dark/style": 268,
  "colorful-terrain/de": 269,
  "colorful-terrain/en": 269,
  "colorful-terrain/style": 269,
  "colorful/de": 268,
  "colorful/en": 268,
  "colorful/nolabel": 236,
  "colorful/style": 268,
  "eclipse-terrain/de": 269,
  "eclipse-terrain/en": 269,
  "eclipse-terrain/style": 269,
  "eclipse/de": 268,
  "eclipse/en": 268,
  "eclipse/nolabel": 236,
  "eclipse/style": 268,
  "empty/style": 5,
  "fnord-terrain/de": 269,
  "fnord-terrain/en": 269,
  "fnord-terrain/style": 269,
  "fnord/de": 268,
  "fnord/en": 268,
  "fnord/nolabel": 236,
  "fnord/style": 268,
  "googol-terrain/de": 269,
  "googol-terrain/en": 269,
  "googol-terrain/style": 269,
  "googol/de": 268,
  "googol/en": 268,
  "googol/nolabel": 236,
  "googol/style": 268,
  "gray-dark-terrain/de": 269,
  "gray-dark-terrain/en": 269,
  "gray-dark-terrain/style": 269,
  "gray-dark/de": 268,
  "gray-dark/en": 268,
  "gray-dark/nolabel": 236,
  "gray-dark/style": 268,
  "gray-terrain/de": 269,
  "gray-terrain/en": 269,
  "gray-terrain/style": 269,
  "gray/de": 268,
  "gray/en": 268,
  "gray/nolabel": 236,
  "gray/style": 268,
  "graybeard-terrain/de": 269,
  "graybeard-terrain/en": 269,
  "graybeard-terrain/style": 269,
  "graybeard/de": 268,
  "graybeard/en": 268,
  "graybeard/nolabel": 236,
  "graybeard/style": 268,
  "muted-dark-terrain/de": 269,
  "muted-dark-terrain/en": 269,
  "muted-dark-terrain/style": 269,
  "muted-dark/de": 268,
  "muted-dark/en": 268,
  "muted-dark/nolabel": 236,
  "muted-dark/style": 268,
  "muted-terrain/de": 269,
  "muted-terrain/en": 269,
  "muted-terrain/style": 269,
  "muted/de": 268,
  "muted/en": 268,
  "muted/nolabel": 236,
  "muted/style": 268,
  "natural-dark-terrain/de": 269,
  "natural-dark-terrain/en": 269,
  "natural-dark-terrain/style": 269,
  "natural-dark/de": 268,
  "natural-dark/en": 268,
  "natural-dark/nolabel": 236,
  "natural-dark/style": 268,
  "natural-terrain/de": 269,
  "natural-terrain/en": 269,
  "natural-terrain/style": 269,
  "natural/de": 268,
  "natural/en": 268,
  "natural/nolabel": 236,
  "natural/style": 268,
  "neutrino-terrain/de": 269,
  "neutrino-terrain/en": 269,
  "neutrino-terrain/style": 269,
  "neutrino/de": 268,
  "neutrino/en": 268,
  "neutrino/nolabel": 236,
  "neutrino/style": 268,
  "positrino-dark-terrain/de": 269,
  "positrino-dark-terrain/en": 269,
  "positrino-dark-terrain/style": 269,
  "positrino-dark/de": 268,
  "positrino-dark/en": 268,
  "positrino-dark/nolabel": 236,
  "positrino-dark/style": 268,
  "positrino-terrain/de": 269,
  "positrino-terrain/en": 269,
  "positrino-terrain/style": 269,
  "positrino/de": 268,
  "positrino/en": 268,
  "positrino/nolabel": 236,
  "positrino/style": 268,
  "protocol-dark-terrain/de": 269,
  "protocol-dark-terrain/en": 269,
  "protocol-dark-terrain/style": 269,
  "protocol-dark/de": 268,
  "protocol-dark/en": 268,
  "protocol-dark/nolabel": 236,
  "protocol-dark/style": 268,
  "protocol-terrain/de": 269,
  "protocol-terrain/en": 269,
  "protocol-terrain/style": 269,
  "protocol/de": 268,
  "protocol/en": 268,
  "protocol/nolabel": 236,
  "protocol/style": 268,
  "protostar-dark-terrain/de": 269,
  "protostar-dark-terrain/en": 269,
  "protostar-dark-terrain/style": 269,
  "protostar-dark/de": 268,
  "protostar-dark/en": 268,
  "protostar-dark/nolabel": 236,
  "protostar-dark/style": 268,
  "protostar-terrain/de": 269,
  "protostar-terrain/en": 269,
  "protostar-terrain/style": 269,
  "protostar/de": 268,
  "protostar/en": 268,
  "protostar/nolabel": 236,
  "protostar/style": 268,
  "protozoa-terrain/de": 269,
  "protozoa-terrain/en": 269,
  "protozoa-terrain/style": 269,
  "protozoa/de": 268,
  "protozoa/en": 268,
  "protozoa/nolabel": 236,
  "protozoa/style": 268,
  "satellite/de": 110,
  "satellite/en": 110,
  "satellite/overlay": 110,
  "satellite/style": 5,
  "shadow-terrain/de": 269,
  "shadow-terrain/en": 269,
  "shadow-terrain/style": 269,
  "shadow/de": 268,
  "shadow/en": 268,
  "shadow/nolabel": 236,
  "shadow/style": 268,
  "terrain/de": 111,
  "terrain/en": 111,
  "terrain/overlay": 111,
  "terrain/style": 6,
  "toner-dark-terrain/de": 269,
  "toner-dark-terrain/en": 269,
  "toner-dark-terrain/style": 269,
  "toner-dark/de": 268,
  "toner-dark/en": 268,
  "toner-dark/nolabel": 236,
  "toner-dark/style": 268,
  "toner-terrain/de": 269,
  "toner-terrain/en": 269,
  "toner-terrain/style": 269,
  "toner/de": 268,
  "toner/en": 268,
  "toner/nolabel": 236,
  "toner/style": 268,
}
`;
